update to https imports

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <!-- google font links -->
     <link
-      href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic"
+      href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic"
       rel="stylesheet"
       type="text/css"
     />
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <!-- Custom styles for this template -->
     <link href="css/main.css" rel="stylesheet" />
   </head>
@@ -265,7 +265,7 @@
       window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>');
     </script>
     <script src="js/bootstrap.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
