enable smooth scrolling for page top

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
           >
             <i class="fa fa-bars"></i>
           </button>
-          <a class="navbar-brand" href="#">Quality Cyber Solutions</a>
+          <a class="navbar-brand" href="#page-top">Quality Cyber Solutions</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse navbar-right navbar-main-collapse">
           <ul class="nav navbar-nav">
-            <li class="hidden">
+            <li class="hidden page-scroll">
               <a href="#page-top"></a>
             </li>
             <li class="page-scroll">
