--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section id="why" class="container content-section text-center">
       <h2 class="text-center">Why Choose Us?</h2>
       <p class="text-center">
-        Here are just a few reasons to choose <strong>Qaulity Cyber</strong> as your consulting partner.
+        Here are just a few reasons to choose <strong>Quality Cyber</strong> as your consulting partner.
       </p>
       <br />
       <div class="row">
