updated with Kai's feedback

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
               <a href="#page-top"></a>
             </li>
             <li class="page-scroll">
-              <a href="#why">Why Us?</a>
+              <a href="#why">Why Choose Us</a>
             </li>
             <li class="page-scroll">
-              <a href="#who">Who Are We?</a>
+              <a href="#who">Who We Are</a>
             </li>
             <li class="page-scroll">
-              <a href="#services">Services</a>
+              <a href="#services">Services We Provide</a>
             </li>
             <li class="page-scroll">
-              <a href="#contact">Contact</a>
+              <a href="#contact">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -69,7 +69,7 @@
             <div class="col-md-8 col-md-offset-2">
               <h1 class="brand-heading">Welcome</h1>
               <p class="intro-text">
-                <strong>Quality Cyber Solutions</strong>, a partner for all your GRC, Cloud, and Digital needs.
+                We are <strong>Quality Cyber Solutions</strong>, a partner for all your GRC, Cloud, and Digital needs.
               </p>
             </div>
           </div>
@@ -77,9 +77,9 @@
       </div>
     </section>
     <section id="why" class="container content-section text-center">
-      <h2 class="text-center">Why Choose Us?</h2>
+      <h2 class="text-center">Why Choose Us</h2>
       <p class="text-center">
-        Here are just a few reasons to choose <strong>Quality Cyber</strong> as your consulting partner.
+        Here are some of the many reasons to choose <strong>Quality Cyber Solutions</strong> as your consulting partner.
       </p>
       <br />
       <div class="row">
@@ -120,9 +120,9 @@
             <div class="icon-content">
               <h3>Responsive</h3>
               <p>
-                As a small firm, local to Tasmania, we pride ourselves on our responsiveness. We are always available to
-                help you with your needs, and we will work with you to make sure that you are getting the best service
-                possible.
+                As a boutique firm specialising in online services, we are able to provide a rapid response to your
+                business needs. Based in Tasmania, we are available to travel to all major Australian cities to provide
+                on site services as required.
               </p>
             </div>
           </div>
@@ -137,8 +137,8 @@
             <div class="icon-content">
               <h3>Resources and Tools</h3>
               <p>
-                With an extensive industry network to support us, we can provide you with recommendations for service
-                and product providers to help support your broader ICT needs.
+                With an extensive industry network to support us, we can provide you with the most up-to-date and
+                comprehensive recommendations for service and product providers to help support your broader ICT needs.
               </p>
             </div>
           </div>
@@ -166,9 +166,9 @@
             <div class="icon-content">
               <h3>Partnerships</h3>
               <p>
-                As part of the TCCI Employer of Choice Assist program, we aim to create a safe, equitable, and enjoyable
-                workspace for all our employees. We believe that ensuring employee satisfaction is not only a moral
-                responsibility but a way of ensuring quality of service to our customers.
+                As part of the TCCI Employer of Choice Assist program, we aim to create a positive workspace for all our
+                employees. Ensuring employee wellbeing is our responsibility and essential to providing the highest
+                quality service to our customers.
               </p>
             </div>
           </div>
@@ -181,9 +181,11 @@
         <div class="container">
           <h2>Who Are We?</h2>
           <p class="lead">
-            <strong>Qaulity Cyber Solutions</strong> are a team of security experts looking to make the digital world a
-            safer place. We are Tasmanian founded, owned, and operated with a commitment to helping grow the local
-            industry capabilities.
+            <strong>Quality Cyber Solutions</strong> are a team of security experts looking to make the digital world a
+            safer place. Our specialists have extensive experience in Technology and Law, allowing us to meet the unique
+            needs of your business in the complex environment of modern Governance, Risk & Compliance. We are an
+            Australian based business specialising in the provision of online services in all states and territories. In
+            our home state of Tasmania, we are committed to helping grow local industry capabilities.
           </p>
           <a href="#contact" class="btn btn-default btn-lg">Contact Us Now</a>
         </div>
@@ -202,8 +204,9 @@
             <div class="icon-content">
               <h3>GRC</h3>
               <p>
-                With an expertise in data privacy and regulation, we offer services for governance, risk, and compliance
-                to ensure that your data is kept safe and compliant.
+                Our team is comprised of professionals with experience in both cyber security and legal practice. We
+                provide governance, risk, and compliance services tailored to your requirements that safeguard your data
+                and ensure regulatory adherence.
               </p>
             </div>
           </div>
@@ -216,7 +219,7 @@
             <div class="icon-content">
               <h3>Cloud</h3>
               <p>
-                As more businesses turn towards SaaS offerings and cloud based infrastructure to both run their business
+                As more businesses turn towards SaaS offerings and cloud based infrastructure to run both their business
                 and their products, we offer expert guidance on how to securely operate your cloud environment while
                 managing costs.
               </p>
@@ -254,7 +257,7 @@
       </div>
     </section>
     <footer>
-      <p>Qaulity Cyber Solutions &copy; 2025, all rights reserved</p>
+      <p>Quality Cyber Solutions Pty Ltd &copy; 2025, all rights reserved.</p>
     </footer>
 
     <!-- Bootstrap core JavaScript
